# jun_py_learning

./: crud.py  db.sqlite3  easy_db.py  jun_work.py  main.py  pyproject.toml  some_file.py  test.py
alembic/: env.py
alembic/versions/: 2025_10_16_1047-c3a7ef3d9bdc_initial.py  2025_10_16_1103-0dc5abd3cd79_asotiation_table.py  2025_10_16_1702-594c46b041fb_initial.py  2025_10_16_1705-c8fa9ec58817_test_association.py  2025_10_16_1710-f0801706182e_add_association_table.py  2025_10_16_1720-af0a662b3e9f_qwerty.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  order.py  order_product_assotiation.py  product.py
